# llm-tool-harness

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anthropic_bash_agent.py
llm_tool_harness/: __init__.py  agent.py  exceptions.py  utils.py
tests/: test_example.py
